--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
+  flutter_bloc: ^7.2.0
+  equatable: ^2.0.3
+  bloc: ^7.1.0
 
 dev_dependencies:
   flutter_test:
