--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_bloc: ^7.2.0
   equatable: ^2.0.3
   bloc: ^7.1.0
+  flutter_svg: ^0.22.0
 
 dev_dependencies:
   flutter_test:
