--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   equatable: ^2.0.3
   bloc: ^7.1.0
   flutter_svg: ^0.22.0
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
