--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   bloc: ^7.1.0
   flutter_svg: ^0.22.0
   provider: ^6.0.0
+  sqflite: ^2.0.0+4
 
 dev_dependencies:
   flutter_test:
