--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   provider: ^6.0.0
   sqflite: ^2.0.0+4
   rxdart: ^0.27.2
+  table_calendar: ^3.0.2
 
 dev_dependencies:
   flutter_test:
